--- a/php5.2/php.ini
+++ b/php5.2/php.ini
@@ -229,7 +229,7 @@ expose_php = On
 
 max_execution_time = 30     ; Maximum execution time of each script, in seconds
 max_input_time = 60	; Maximum amount of time each script may spend parsing request data
-memory_limit = 32M      ; Maximum amount of memory a script may consume (8MB)
+memory_limit = 192M      ; Maximum amount of memory a script may consume (8MB)
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -267,7 +267,7 @@ memory_limit = 32M      ; Maximum amount of memory a script may consume (8MB)
 ;
 ;   - Show all errors except for notices
 ;
-error_reporting  =  E_ALL
+error_reporting = E_ALL & ~E_NOTICE
 
 ; Print out errors (as a part of the output).  For production web sites,
 ; you're strongly encouraged to turn this feature off, and use error logging
