Added vhosts for 80 and 443 with SSL keys configured. Added ssl key and cert. Configured php 5.3 with APC.

--- a/php5.2/php.ini
+++ b/php5.2/php.ini
@@ -535,7 +535,7 @@ default_socket_timeout = 60
 
 ; Extensions
 
-;extension=apc.so
+extension=apc.so
 
 extension=imap.so
 extension=yaz.so
@@ -1084,7 +1084,7 @@ sockets.use_system_read = On
 ; End:
 
 
-zend_extension="/Applications/MAMP/bin/php5.2/lib/php/extensions/no-debug-non-zts-20060613/eaccelerator.so"
+;zend_extension="/Applications/MAMP/bin/php5.2/lib/php/extensions/no-debug-non-zts-20060613/eaccelerator.so"
   eaccelerator.shm_size="16"
   eaccelerator.cache_dir="/Applications/MAMP/tmp/eaccelerator"
   eaccelerator.enable="1"
@@ -1172,4 +1172,4 @@ zend_optimizer.optimization_level=15
 zend_extension_manager.optimizer=/Applications/MAMP/bin/php5.2/zend/lib/Optimizer-3.3.9
 zend_optimizer.version=3.3.9
 
-zend_extension=/Applications/MAMP/bin/php5.2/zend/lib/ZendExtensionManager.so
+;zend_extension=/Applications/MAMP/bin/php5.2/zend/lib/ZendExtensionManager.so
