--- a/php5.3/php.ini
+++ b/php5.3/php.ini
@@ -529,7 +529,7 @@ default_socket_timeout = 60
 
 ; Extensions
 
-;extension=apc.so
+extension=apc.so
 
 extension=imap.so
 extension=yaz.so
@@ -1101,7 +1101,7 @@ sockets.use_system_read = On
 
 [xcache-common]
 ; install as zend extension (recommended), normally "$extension_dir/xcache.so"
-zend_extension = "/Applications/MAMP/bin/php5.3/lib/php/extensions/no-debug-non-zts-20090626/xcache.so"
+;zend_extension = "/Applications/MAMP/bin/php5.3/lib/php/extensions/no-debug-non-zts-20090626/xcache.so"
 ; zend_extension_ts = "/Applications/MAMP/bin/php5.3/lib/php/extensions/no-debug-non-zts-20090626/xcache.so"
 
 [xcache.admin]
