--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -216,7 +216,7 @@ MaxRequestsPerChild    0
 #
 #Listen 12.34.56.78:80
 
-Listen 8888
+Listen 80
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -231,9 +231,9 @@ Listen 8888
 # LoadModule foo_module modules/mod_foo.so
 
 
-<IfDefine SSL>
+#<IfDefine SSL>
 LoadModule ssl_module modules/mod_ssl.so
-</IfDefine>
+#</IfDefine>
 
 LoadModule access_module modules/mod_access.so
 LoadModule auth_module modules/mod_auth.so
@@ -348,7 +348,7 @@ ServerAdmin you@example.com
 # redirections work in a sensible way.
 #
 
-ServerName localhost:8888
+ServerName localhost:80
 
 #
 # UseCanonicalName: Determines how Apache constructs self-referencing 
@@ -1131,6 +1131,12 @@ BrowserMatch "^gnome-vfs" redirect-carefully
 #
 
 # NameVirtualHost *
+NameVirtualHost *:80
 
+<VirtualHost *:80>
+        ServerName localhost:80
+        ServerAlias default.site
+        DocumentRoot "/Users/mdshrops/Sites/"
+</VirtualHost>
 
-Include /private/etc/apache2/extra/httpd-vhosts.conf
+#Include /private/etc/apache2/extra/httpd-vhosts.conf
