Removed vhost entries and enabled VirtualHostX include so.... well I can use VirtualHostX to setup SSL vhosts! FTW!

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -1131,12 +1131,5 @@ BrowserMatch "^gnome-vfs" redirect-carefully
 #
 
 # NameVirtualHost *
-NameVirtualHost *:80
 
-<VirtualHost *:80>
-        ServerName localhost:80
-        ServerAlias default.site
-        DocumentRoot "/Users/mdshrops/Sites/"
-</VirtualHost>
-
-#Include /private/etc/apache2/extra/httpd-vhosts.conf
+Include /private/etc/apache2/extra/httpd-vhosts.conf
